Add default value for date in mark model. Implement post and put methods for mark. Update swagger docs and rename it to openapi
